--- a/appspec.json
+++ b/appspec.json
@@ -7,7 +7,7 @@
           "Properties": {
             "TaskDefinition": "<TASK_DEFINITION>",
             "LoadBalancerInfo": {
-              "ContainerName": "container-app-blacklist",
+              "ContainerName": "Container-app-blacklist",
               "ContainerPort": 5000
             }
           }
